--- a/Version 10/README
+++ b/Version 10/README
@@ -1,8 +1,4 @@
-ComS327
-Neha Maddali - nmaddali
-12/7/22
-Choose Your Own Assignment HW10
-Programming Project 1.10/2
+Sankeerth Maddali
 
 Setup:
 "make clean" to remove all generated files
