--- a/Version 2/README
+++ b/Version 2/README
@@ -1,7 +1,5 @@
-ComS327
-Neha Maddali
-9/14/22
-Moving from Map to Map HW2
+Sankeerth Maddali
+Moving from Map to Map 
 Programming Project 1.02
 
 This program is not built off of HW1 because I noticed that there were going to be issues when writing code for HW2.
