--- a/Version 3/README
+++ b/Version 3/README
@@ -1,8 +1,4 @@
-ComS327
-Neha Maddali - nmaddali
-9/28/22
-Path Finding HW3
-Programming Project 1.03
+Sankeerth Maddali
 
 This program is built off of the professor's solutions to Programming Project 1.02
 This program generates the distance maps for the current player and other players. 
