--- a/Version 4/README
+++ b/Version 4/README
@@ -1,7 +1,6 @@
-ComS327
-Neha Maddali - nmaddali
-10/5/22
-Player Character and Trainers HW4
+Sankeerth Maddali
+
+Player Character and Trainers 
 Programming Project 1.04
 
 This program is built off of the professor's solutions to Programming Project 1.03
