--- a/Version 5/README
+++ b/Version 5/README
@@ -1,7 +1,5 @@
-ComS327
-Neha Maddali - nmaddali
-10/19/22
-User Interface HW5
+Sankeerth Maddali 
+User Interface 
 Programming Project 1.05
 
 Setup:
