--- a/Version 6/README
+++ b/Version 6/README
@@ -1,7 +1,5 @@
-ComS327
-Neha Maddali - nmaddali
-10/26/22
-Moving to Neighboring Maps and Porting to C++ HW6
+Sankeerth Maddali 
+Moving to Neighboring Maps and Porting to C++
 Programming Project 1.06
 
 Setup:
