--- a/Version 8/README
+++ b/Version 8/README
@@ -1,7 +1,6 @@
-ComS327
-Neha Maddali - nmaddali
-11/9/22
-Loading Pokemon HW8
+Sankeerth Maddali 
+
+Loading Pokemon 
 Programming Project 1.08
 
 Setup:
