--- a/Version 9/README
+++ b/Version 9/README
@@ -1,7 +1,6 @@
-ComS327
-Neha Maddali - nmaddali
-11/16/22
-Loading Pokemon HW9
+Sankeerth Maddali
+
+Loading Pokemon 
 Programming Project 1.09
 
 Setup:
